--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="bg-img">
+    <header class="bg-img">
         <div class="container-fluid">
             <nav class="navbar navbar-expand-md fixed-top navbar-light">
                 <div id="data-target">
-                    <a class="navbar-brand" href="#">GOLDEN</a>
+                    <a class="navbar-brand" href="#">NATURAL</a>
                 </div>
                 <div class="collapse navbar-collapse" id="mobile-menu">
-                    <ul class="navbar-nav  mr-auto">
-                        <li><a class="nav-link" href="#">Home</a></li>
-                        <li><a class="nav-link" href="#">Services</a></li>
-                        <li><a class="nav-link" href="#">Portfolio</a></li>
-                        <li><a class="nav-link" href="#">About</a></li>
-                        <li><a class="nav-link" href="#">Contact</a></li>
+                    <ul class="navbar-nav  mr-auto d-flex">
+                        <li><a class="nav-link" href="#">HOME</a></li>
+                        <li><a class="nav-link" href="#">SERVICES</a></li>
+                        <li><a class="nav-link" href="#">PORTFOLIO</a></li>
+                        <li><a class="nav-link" href="#">ABOUT</a></li>
+                        <li><a class="nav-link" href="#">CONTACT</a></li>
                     </ul>
                 </div>
             </nav>
@@ -33,10 +33,65 @@
         <div class="nav-h1 w-75 carousel-caption align-middle">
             <h2 class="introdution-mobile-h2 font-weight-light">Welcome To Our Studio!</h2>
             <h1 class="introdution-mobile-h1 display-3 mb-5 mt-3">IT'S NICE TO MEET YOU</h1>
-            <a class="btn btn-1 btn-light" href="#" role="button">TELL ME MORE</a>
+            <a class="btn btn-1 btn-light" href="#" role="button">TELL ME</a>
+        </div>
+    </header>
+    <section class="content">
+        <div class="title-content">
+            <h2>SERVICES</h2>
+            <p>Prain iaculis purus consequat</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card-body">
+                        <i class="fas fa-shopping-basket"></i>
+                        <h3 class="card-title">E-Commerce</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna
+                            aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card-body">
+                        <i class="fas fa-laptop-code"></i>
+                        <h3 class="card-title">Responsive Web</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna
+                            aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card-body">
+                        <i class="fas fa-lock"></i>
+                        <h3 class="card-title">Web Security</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna
+                            aliqua. Ut enim ad minim veniam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>    
+    </section>
+    <section class="boxes">
+        <div class="title-content">
+            <h2>OUR PORTFOLIO</h2>
+            <p>Prain iaculis purus consequat</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div> 
+                </div>
+            </div>
         </div>
     </section>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>     
